--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "materialize-css": "^0.98.0",
     "moment": "^2.17.1",
     "multer": "^1.3.0",
+    "overlay-component": "^0.3.5",
     "page": "^1.7.1",
     "pug": "^2.0.0-beta11",
     "react": "^15.4.2",
     "superagent": "^3.5.0",
     "title": "^1.0.0",
+    "webcamjs": "^1.0.22",
     "yo-yo": "^1.4.0"
   },
   "devDependencies": {
